src/main/leftSide/_channels.scss
@use '../../var' as *;

.visual-refresh ._2637a2609f343032-container {
    background: var($main); //bg
    padding-bottom: unset; //removes the most annoying box in history, the one behind profile wiget thingy
}

.visual-refresh ._5e434347c823b592-sidebarList {border: none;}

.visual-refresh ._5e434347c823b592-sidebar:after {background: none;}

//---------------------------------channel sel & hov---------------------------------//
._2ea32c412048f708-wrapper:hover { //hov
    ._2ea32c412048f708-link {background: var($sec); transition: 0.3s;}
    ._2ea32c412048f708-name, ._2ea32c412048f708-icon, .c69b6db0641110f6-actionIcon {color: var($txt); transition: 0.3s;}
}

//----------unread----------//
._2ea32c412048f708-modeUnreadImportant {
    ._2ea32c412048f708-name, &:hover ._2ea32c412048f708-name,
    ._2ea32c412048f708-icon, &:hover ._2ea32c412048f708-icon,
    .c69b6db0641110f6-actionIcon {color: var($acc) !important;}
}
._2ea32c412048f708-unreadImportant {background: var($acc)}; //dot
//--------------------------//

._2ea32c412048f708-modeSelected { //sel
    ._2ea32c412048f708-link {color: var($txt); background: var($accA);}
    ._2ea32c412048f708-link:hover {color: var($txt); background: var($accA); transition: 0.3s;}
}

._76f047ded9fef6d4-popout { //threads
    background: var($accA);
    backdrop-filter: blur(var($blur));
}
//-----------------------------------------------------------------------------------//

/*--------------------thread list--------------------*/
._5b40bdd67543ba35-spine {color: var($acc);}

._5b40bdd67543ba35-spineBorder {background: var($acc);}
/*---------------------------------------------------*/

//------------New Unreads------------//
._3b95d7d910416e54-unread {
    background: var($accA);
    backdrop-filter: blur(var($blur));
}
//-----------------------------------//

